test/fixtures/public/fail/semantic/var_lit_incomp.jmm
/*  REASON:
    Variable assignments to literals must have the literal be the variable's type.
*/

class T {
    public static void main(String[] a) { 
        int i;
        i = true;
    }
}
